src/objects/Candidate__c.object
<CustomObject>
    <description>Candidates for positions.</description>
    <fields>
        <fullName>Address__c</fullName>
        <description>Address of the candidate - changed.</description>
        <inlineHelpText>Address of the candidate.</inlineHelpText>
        <label>Address</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City in which the candidate lives.</description>
        <inlineHelpText>City in which the candidate lives.</inlineHelpText>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country for the candidate.</description>
        <inlineHelpText>Country for the candidate.</inlineHelpText>
        <label>Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Employer__c</fullName>
        <description>Current employer of the candidate.</description>
        <inlineHelpText>Current employer of the candidate.</inlineHelpText>
        <label>Current Employer</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <description>Highest level of educational attainment by candidate.</description>
        <inlineHelpText>Highest level of educational attainment by candidate.</inlineHelpText>
        <label>Education</label>
        <picklist>
            <picklistValues>
                <fullName>High school</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Masters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PhD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-doc</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email address for the candidate.</description>
        <inlineHelpText>Email address for the candidate.</inlineHelpText>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>First name of the candidate.</description>
        <inlineHelpText>First name of the candidate.</inlineHelpText>
        <label>First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Last name of the candidate.</description>
        <inlineHelpText>Last name of the candidate.</inlineHelpText>
        <label>Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>ID from legacy system.</description>
        <externalId>true</externalId>
        <inlineHelpText>ID from legacy system.</inlineHelpText>
        <label>Legacy ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <description>Mobile phone of the candidate.</description>
        <inlineHelpText>Mobile phone of the candidate.</inlineHelpText>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Phone number of candidate.</description>
        <inlineHelpText>Phone number of candidate.</inlineHelpText>
        <label>Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <description>Postal code for the candidate.</description>
        <inlineHelpText>Postal code for the candidate.</inlineHelpText>
        <label>Postal Code</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <description>State or province in which the candidate lives.</description>
        <inlineHelpText>State or province in which the candidate lives.</inlineHelpText>
        <label>State/Province</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>Candidate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Phone__c</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CAN-{000000}</displayFormat>
        <label>Candidate ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>